# algomancer

./: .env  README.md
algomancer/: README.md  pyproject.toml
algomancer/src/algomancer/: __init__.py
algomancer/src/utils/: config.py  problem_loader.py
algomancer/tests/: test_cli.py
