[project]
name = "algomancer"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakob Louis Therkelsen",email = "therkels@msu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry]
packages = [{include = "algomancer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
algomancer = "algomancer:cli"
